# octagon-research-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
octagon_web_demo/: agents.py  config.py  main.py  pipeline.py  utils.py  web_app.py
octagon_web_demo/input/: companies.csv  test.csv
octagon_web_demo/templates/: index.html  process.html  results.html  template.md
