[tool.poetry]
name = "octagon-web-demo"
version = "0.0.1"
description = "Web + CLI tool to run Octagon-based Investment research"
authors = ["You <ken@octagonagents.com>"]
packages = [{ include = "octagon_web_demo" }]
include = ["octagon_web_demo/templates/*"]


[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
openai-agents = "^0.0.7"
python-dotenv = "^1.0.0"
flask = "^3.0.0"
werkzeug = "^3.0.0"
aiofiles = "^23.2.1"

[tool.poetry.scripts]
research = "octagon_web_demo.main:cli"
web = "octagon_web_demo.web_app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
